--- a/forms.html
+++ b/forms.html
@@ -19,6 +19,14 @@
             <label for="surname">Nazwisko:</label>
             <input class="form_item" type="text" placeholder="Mazan" id="surname" name="surname">
         </p>
+        <p>
+            <label for="phone">Numer telefonu:</label>
+            <input class="form_item" type="tel" placeholder="komorkowy lub stacjonarny" id="phone" name="phone">
+       </p>
+       <p>
+        <label>Ulubiony numer:</label>
+        <input class="form_item" type="number" placeholder="123456789" id="favouriteNumber" name="favouriteNumber">
+        </p>
     </form>
 </main>
 </body>
